# Bergamot

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  deploy_pantheon.yml  docker-compose.edge.yml  docker-compose.yml  hosts.ini  package-lock.json  package.json  package.sh
Admin/: Dockerfile  README.md  package.json
Admin/public/: app.js  index.html
Admin/src/: server.mjs
Anansi/: CONNECTION_GUIDE.md  README.md  docker-compose.yml
Anansi/scripts/: health-check.sh
Apollo/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  livekit.yaml  package.json
Apollo/src/: config.js  index.js
EdgeProxy/: Caddyfile
Hermes/: Dockerfile  README.md  docker-compose.yml  mix.exs
Hermes/config/: config.exs  (+4 more)
Hiemdall/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
Hiemdall/src/: main.rs
Hiemdall/src/consumer/: kafka.rs
Hiemdall/src/models/: events.rs
Hiemdall/src/redis_state/: mod.rs  read_tracker.rs  unread.rs
Janus/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
MediaProxy/: Dockerfile  README.md  package.json
Mnemosyne/: Dockerfile  README.md  package.json
Proteus/: .gitignore  Makefile  README.md  STYLE_GUIDE.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.web.ts  vitest.config.ts  webpack.main.js  webpack.renderer.js
Thoth/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
Thoth/src/: main.rs
Thoth/src/consumer/: kafka.rs
Thoth/src/db/: repository.rs  schema.rs
Thoth/src/models/: message.rs  snowflake.rs
(+228 files in other folders)
