[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"
description = "Read State & Notification Worker — the watchman of Bergamot"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
